--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.2",
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-safe-area-context": "^5.3.0",
@@ -22,6 +24,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
+    "@prisma/client": "^6.5.0",
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
@@ -35,6 +38,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "prisma": "^6.5.0",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
